test/fail/type-parameter-count-none-in-method.grace
type {
  name(param)
}.assert(object {
  method name {}
})
